syntax = "proto3";

package platform;

import "platform.proto";

option go_package = "proto/pb";

service BuildClusterService { rpc BuildCluster(Project) returns(Project); }